major design update

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?114823713"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4091799891"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?331469364" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?475081617"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?4183719001" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -19,27 +19,22 @@
   <div class="clearfix" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
     <div class="clearfix colelem" id="pu87"><!-- group -->
-     <div class="shadow browser_width grpelem" id="u87"><!-- column -->
-      <div class="clearfix" id="u87_align_to_page">
-       <div class="position_content" id="u87_position_content">
-        <ul class="MenuBar clearfix colelem" id="menuu196"><!-- row -->
-         <li class="MenuItemContainer clearfix grpelem" id="u412"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u413" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u415-4"><!-- content --><p>Home</p></div></a>
-         </li>
-         <li class="MenuItemContainer clearfix grpelem" id="u419"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u420" href="games.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u421-4"><!-- content --><p>Games</p></div></a>
-         </li>
-         <li class="MenuItemContainer clearfix grpelem" id="u509"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u512" href="blank.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u513-4"><!-- content --><p>Blank</p></div></a>
-         </li>
-         <li class="MenuItemContainer clearfix grpelem" id="u433"><!-- vertical box -->
-          <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u434" href="news.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u437-4"><!-- content --><p>News</p></div></a>
-         </li>
-        </ul>
-        <img class="colelem" id="u401" src="images/homesteadgaming-u401.png" alt="" width="485" height="78"/><!-- rasterized frame -->
-       </div>
-      </div>
-     </div>
+     <div class="browser_width grpelem" id="u87"><!-- simple frame --></div>
+     <img class="grpelem" id="u401" src="images/homesteadgaming-u401.png" alt="" width="485" height="78"/><!-- rasterized frame -->
+     <ul class="MenuBar clearfix grpelem" id="menuu196"><!-- row -->
+      <li class="MenuItemContainer clearfix grpelem" id="u412"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u413" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u415-4"><!-- content --><p>Home</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u419"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u420" href="games------------------.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u421-4"><!-- content --><p>Games&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; .</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u509"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u512" href="blog.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u513-4"><!-- content --><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Blog</p></div></a>
+      </li>
+      <li class="MenuItemContainer clearfix grpelem" id="u433"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u434" href="news.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u437-4"><!-- content --><p>News</p></div></a>
+      </li>
+     </ul>
      <div class="grpelem" id="u487"><!-- image -->
       <img class="block" id="u487_img" src="images/homesteadgamingcabin.png" alt="" width="129" height="127"/>
      </div>
@@ -47,38 +42,22 @@
     <div class="SlideShowWidget clearfix colelem" id="slideshowu277"><!-- group -->
      <div class="popup_anchor" id="u321-4popup">
       <div class="SlideShowLabel SSSlideCount clearfix" id="u321-4"><!-- content -->
-       <p><span id="u321">1 &#45; 3</span></p>
+       <p><span id="u321">1 &#45; 2</span></p>
       </div>
      </div>
      <div class="popup_anchor" id="u280popup">
       <div class="SlideShowContentPanel clearfix" id="u280"><!-- stack box -->
-       <div class="SSSlide clearfix grpelem" id="u363"><!-- image -->
-        <div id="u363_clip">
-         <img class="ImageInclude position_content" id="u363_img" data-src="images/titlescreennoglows.jpg" src="images/blank.gif" alt="" data-width="480" data-height="360"/>
-        </div>
-       </div>
-       <div class="SSSlide invi clearfix grpelem" id="u377"><!-- image -->
-        <div id="u377_clip">
-         <img class="ImageInclude position_content" id="u377_img" data-src="images/gatorchomptitle.png" src="images/blank.gif" alt="" data-width="480" data-height="320"/>
-        </div>
-       </div>
-       <div class="SSSlide invi clearfix grpelem" id="u391"><!-- image -->
-        <div id="u391_clip">
-         <img class="ImageInclude position_content" id="u391_img" data-src="images/background.png" src="images/blank.gif" alt="" data-width="480" data-height="320"/>
-        </div>
-       </div>
+       <a class="nonblock nontext SSSlide clearfix grpelem" id="u363" href="number-rhumbus.html"><!-- image --><div id="u363_clip"><img class="ImageInclude position_content" id="u363_img" data-src="images/titlescreennoglows.jpg" src="images/blank.gif" alt="" data-width="480" data-height="360"/></div></a>
+       <a class="nonblock nontext SSSlide invi clearfix grpelem" id="u377" href="gator-chomp.html"><!-- image --><div id="u377_clip"><img class="ImageInclude position_content" id="u377_img" data-src="images/gatorchomptitle.png" src="images/blank.gif" alt="" data-width="480" data-height="320"/></div></a>
       </div>
      </div>
      <div class="popup_anchor" id="u322popup">
       <div class="SlideShowCaptionPanel clearfix" id="u322"><!-- stack box -->
        <div class="SSSlideCaption clearfix grpelem" id="u369-4"><!-- content -->
-        <p>Number Rhumbus title screen caption</p>
+        <p>Number Rhumbus available now in the Apple Store!</p>
        </div>
        <div class="SSSlideCaption invi clearfix grpelem" id="u383-4"><!-- content -->
-        <p>Gator Chomp title screen caption</p>
-       </div>
-       <div class="SSSlideCaption invi clearfix grpelem" id="u397-4"><!-- content -->
-        <p>Gator Chomp ingame image caption</p>
+        <p>Gator Chomp&nbsp; available in the Apple Store!</p>
        </div>
       </div>
      </div>
@@ -94,6 +73,10 @@
      </div>
     </div>
     <div class="verticalspacer"></div>
+    <div class="clearfix colelem" id="u827-6"><!-- content -->
+     <p>Contact us at info@homesteadgaming.com.</p>
+     <p>Privacy policy: none of our games collect any personal information.</p>
+    </div>
    </div>
   </div>
   <!-- JS includes -->
@@ -104,8 +87,8 @@
    window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
 </script>
   <script src="scripts/museutils.js?3885830161" type="text/javascript"></script>
-  <script src="scripts/jquery.musemenu.js?32367222" type="text/javascript"></script>
   <script src="scripts/jquery.tobrowserwidth.js?4262060562" type="text/javascript"></script>
+  <script src="scripts/jquery.musemenu.js?32367222" type="text/javascript"></script>
   <script src="scripts/webpro.js?4369767" type="text/javascript"></script>
   <script src="scripts/musewpslideshow.js?83045620" type="text/javascript"></script>
   <script src="scripts/jquery.museoverlay.js?3925244142" type="text/javascript"></script>
